--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click==8.1.3
 cohere==4.1.4
 colorama==0.4.6
 Flask==2.2.3
+flask-localtunnel==1.0.5
 frozenlist==1.3.3
 idna==3.4
 itsdangerous==2.1.2
